--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,6 @@
   background-color: #ededed;
   margin-top: -50px;
   height: 90vh;
-  width: 90vh;
+  width: 90%;
   box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
 }
