--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -8,7 +8,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 20px;
+  padding: 10px;
   border-right: 1px solid lightgray;
 }
 
@@ -28,7 +28,7 @@
   display: flex;
   align-items: center;
   background-color: #f6f6f6;
-  height: 40px;
+  height: 50px;
   padding: 10px;
 }
 
@@ -39,6 +39,8 @@
   width: 100%;
   height: 35px;
   border-radius: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .sidebar__searchContainer > .MuiSvgIcon-root {
@@ -50,6 +52,9 @@
   border: none;
   outline-width: 0;
   margin-left: 10px;
+  width: 100%;
+  padding-right: 20px;
+  font-size: 1.05rem;
 }
 
 .sidebar__chats {
