--- a/src/App.css
+++ b/src/App.css
@@ -14,8 +14,11 @@
 .app__body {
   display: flex;
   background-color: #ededed;
-  margin-top: -50px;
   height: 90vh;
-  width: 90%;
+  width: 80%;
   box-shadow: -1px 4px 20px -6px rgba(0, 0, 0, 0.75);
+}
+
+::-webkit-scrollbar {
+  width: 50%;
 }
